--- a/style.css
+++ b/style.css
@@ -217,10 +217,11 @@ nav .portfolioicon-burger .line{
         right: 0;
         top: 80px;
         bottom: 100%;
+        margin-left: 50%;
         z-index: 9;
         background:rgba(0,0,0,0.75);
         display: flex;
-        width: auto;
+        width: 50%;
         height: auto;
         justify-content: space-evenly;
         align-items: center;
