--- a/style.css
+++ b/style.css
@@ -220,7 +220,6 @@ nav .portfolioicon-burger .line{
         margin-left: 50%;
         z-index: 9;
         background:#FAE965;
-        color: black;
         display: flex;
         width: 50%;
         height: auto;
@@ -232,10 +231,10 @@ nav .portfolioicon-burger .line{
     }
     nav .links a{
         font-size: 20px;
-        color: white;
+        color: #000;
     }
     nav .links li a{
-        color:white;
+        color:#000;
         text-decoration: none;
         font-size: 14px;   
     }
